feat: add create todo function

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,11 @@
+<a href="./records/new">Create</a>
 <ul>
   {{#each records}}
   <li>
     {{this.name}}
+    {{this.date}}
+    {{this.category}}
+    {{this.amount}}
   </li>
   {{/each}}
 </ul>
