feat: CRUD function basic ok

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,6 +6,10 @@
     {{this.date}}
     {{this.category}}
     {{this.amount}}
+    <a href="./records/{{ this._id }}/edit">edit</a>
+    <form action="./todos/{{ this._id }}/delete" method="POST" style="display: inline;">
+      <button type="submit">delete</button>
+    </form>
   </li>
   {{/each}}
 </ul>
