--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,4 +1,4 @@
-<form action="/records/{{ record._id }}/edit" method="POST">
+<form action="/records/{{ record._id }}?_method=PUT" method="POST">
   <p>
     <label>名稱*：
       <input type="text" placeholder="name" name="name" value="{{ record.name }}">
