--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,7 @@
     {{this.category}}
     {{this.amount}}
     <a href="./records/{{ this._id }}/edit">edit</a>
-    <form action="./todos/{{ this._id }}/delete" method="POST" style="display: inline;">
+    <form action="./todos/{{ this._id }}?_method=DELETE" method="POST" style="display: inline;">
       <button type="submit">delete</button>
     </form>
   </li>
