--- a/views/new.hbs
+++ b/views/new.hbs
@@ -12,6 +12,7 @@
   <p>
     <label>類別*：
       <select name="category">
+        <option value="" disabled selected hidden>請選擇</option>
         <option value="家居物業">家居物業</option>
         <option value="交通出行">交通出行</option>
         <option value="休閒娛樂">休閒娛樂</option>
@@ -26,5 +27,6 @@
     </label>
   </p>
 
-  <p><button type="submit">新增支出</button></p>
+  <button type="submit" class="btn btn-outline-dark">新增支出</button>
+  <a href="/" class="btn btn-secondary">back</a>
 </form>
