--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,7 +18,7 @@
     </nav>
   </header>
   <main>
-    <div class="container mt-5">
+    <div class="container mt-5 px-5">
       {{{ body }}}
     </div>
   </main>
