--- a/views/new.hbs
+++ b/views/new.hbs
@@ -1,32 +1,34 @@
-<form action="/records" method="POST">
-  <p>
-    <label>名稱*：
-      <input type="text" placeholder="name" name="name">
-    </label>
-  </p>
-  <p>
-    <label>日期*：
-      <input type="date" placeholder="date" name="date">
-    </label>
-  </p>
-  <p>
-    <label>類別*：
-      <select name="category">
-        <option value="" disabled selected hidden>請選擇</option>
-        <option value="家居物業">家居物業</option>
-        <option value="交通出行">交通出行</option>
-        <option value="休閒娛樂">休閒娛樂</option>
-        <option value="餐飲食品">餐飲食品</option>
-        <option value="其他">其他</option>
-      </select>
-    </label>
-  </p>
-  <p>
-    <label>金額*：
-      <input type="text" placeholder="amount" name="amount">
-    </label>
-  </p>
+<div class="">
+  <form action="/records" method="POST">
+    <p>
+      <label>名稱*：
+        <input type="text" placeholder="name" name="name">
+      </label>
+    </p>
+    <p>
+      <label>日期*：
+        <input type="date" placeholder="date" name="date">
+      </label>
+    </p>
+    <p>
+      <label>類別*：
+        <select name="category">
+          <option value="" disabled selected hidden>請選擇</option>
+          <option value="家居物業">家居物業</option>
+          <option value="交通出行">交通出行</option>
+          <option value="休閒娛樂">休閒娛樂</option>
+          <option value="餐飲食品">餐飲食品</option>
+          <option value="其他">其他</option>
+        </select>
+      </label>
+    </p>
+    <p>
+      <label>金額*：
+        <input type="text" placeholder="amount" name="amount">
+      </label>
+    </p>
 
-  <button type="submit" class="btn btn-outline-dark">新增支出</button>
-  <a href="/" class="btn btn-secondary">back</a>
-</form>
+    <button type="submit" class="btn btn-outline-dark">新增支出</button>
+    <a href="/" class="btn btn-secondary">back</a>
+  </form>
+</div>
