feat: add total amount function

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,8 +15,10 @@
   </li>
   <li class="list-group-item">
     <div class="totalAmount row justify-content-center">
-      <p class="mb-0">總金額：</p>
-      <input type="text" name="" class="bg-white border-0 text-danger text-center" value="總金額" disabled>
+      <p class="mb-0 align-self-center">總金額：</p>
+      <input type="text" name="" class="bg-white border-0 text-danger text-center" style="font-size: 50px; width:300px;"
+        value="{{total}}" disabled>
+
     </div>
   </li>
   {{#each recordsWithIcon}}
