--- a/views/new.hbs
+++ b/views/new.hbs
@@ -1,44 +1,48 @@
-<form action="/records" method="POST">
-  <div class="row" style="width:300px;">
-    <div class="col-12 mb-4">
-      <div class="row justify-content-between">
-        <span>*必填欄位</span>
-        <div class="col-9 row justify-content-end">
-          <button type="submit" class="btn btn-outline-dark mr-3 col-6"><i class="fas fa-plus"></i></button>
-          <a href="/" class="btn btn-secondary"><i class="fas fa-times"></i></a>
+<div class="list-group-item">
+  <div class="container px-4 py-3">
+    <form action="/records" method="POST">
+      <div class="row" style="width:300px;">
+        <div class="col-12 mb-4">
+          <div class="row justify-content-between">
+            <span>*必填欄位</span>
+            <div class="col-9 row justify-content-end">
+              <button type="submit" class="btn btn-outline-dark mr-3 col-6"><i class="fas fa-plus"></i></button>
+              <a href="/" class="btn btn-secondary"><i class="fas fa-times"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 mb-4" style="font-size: 20px;">
+          <label class="row justify-content-between">
+            <span class="col-4 pl-0"> 名稱* ：</span>
+            <input type="text" name="name" class="col-8" required>
+          </label>
+        </div>
+        <div class="col-12 mb-4" style="font-size: 20px;">
+          <label class="row justify-content-between">
+            <span class="col-4 pl-0">日期* ：</span>
+            <input type="date" name="date" class="col-8" required>
+          </label>
+        </div>
+        <div class="col-12 mb-4" style="font-size: 20px;">
+          <label class="row justify-content-between">
+            <span class="col-4 pl-0">類別* ：</span>
+            <select name="category" class="col-8" required>
+              <option value="" disabled selected hidden>請選擇</option>
+              <option value="家居物業">家居物業</option>
+              <option value="交通出行">交通出行</option>
+              <option value="休閒娛樂">休閒娛樂</option>
+              <option value="餐飲食品">餐飲食品</option>
+              <option value="其他">其他</option>
+            </select>
+          </label>
+        </div>
+        <div class="col-12" style="font-size: 20px;">
+          <label class="row justify-content-between">
+            <span class="col-4 pl-0">金額* ：</span>
+            <input type="text" name="amount" class="col-8" required>
+          </label>
         </div>
       </div>
-    </div>
-    <div class="col-12 mb-4" style="font-size: 20px;">
-      <label class="row justify-content-between">
-        <span class="col-4 pl-0"> 名稱* ：</span>
-        <input type="text" name="name" class="col-8" required>
-      </label>
-    </div>
-    <div class="col-12 mb-4" style="font-size: 20px;">
-      <label class="row justify-content-between">
-        <span class="col-4 pl-0">日期* ：</span>
-        <input type="date" name="date" class="col-8" required>
-      </label>
-    </div>
-    <div class="col-12 mb-4" style="font-size: 20px;">
-      <label class="row justify-content-between">
-        <span class="col-4 pl-0">類別* ：</span>
-        <select name="category" class="col-8" required>
-          <option value="" disabled selected hidden>請選擇</option>
-          <option value="家居物業">家居物業</option>
-          <option value="交通出行">交通出行</option>
-          <option value="休閒娛樂">休閒娛樂</option>
-          <option value="餐飲食品">餐飲食品</option>
-          <option value="其他">其他</option>
-        </select>
-      </label>
-    </div>
-    <div class="col-12" style="font-size: 20px;">
-      <label class="row justify-content-between">
-        <span class="col-4 pl-0">金額* ：</span>
-        <input type="text" name="amount" class="col-8" required>
-      </label>
-    </div>
+    </form>
   </div>
-</form>
+</div>
